templates/external-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  type: NodePort
  selector:
    app: web
  ports:
  - protocol: TCP
    port: 8084
    nodePort: 30084
