templates/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: web
    http:
      paths:
      - path: /
        backend:
          serviceName: web-service
          servicePort: 8084
